--- a/hackHer_Resources.ipynb
+++ b/hackHer_Resources.ipynb
@@ -55,7 +55,7 @@
         "       'q=COVID-19&'\n",
         "       'from = now()'\n",
         "       'sortBy=popularity&'\n",
-        "       'apiKey=7b9acf02b101438b9f3e45b012d08d62')\n",
+        "       'apiKey=')\n",
         "response = requests.get(url)\n",
         "print (response.json())"
       ],
@@ -88,7 +88,7 @@
         "import requests \n",
         "import json  \n",
         "\n",
-        "API_KEY = 'AIzaSyBgF2c48OLQ1Q8QZRrbA-l_GCM1IiY64eg'\n",
+        "API_KEY = ''\n",
         "\n",
         "google_places = GooglePlaces(API_KEY)\n",
         "\n",
